<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  
  <ScrollView
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
  
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/app_name" />

  <TextView android:id="@+id/version_name"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
  
  <TextView
    android:paddingTop="5dip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/about_author" />
    
  <TextView android:id="@+id/xmp_version"
    android:paddingTop="5dip"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="15dip"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/about_license" />
    
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="5dip"
    android:text="@string/about_license_text" />
  
  </LinearLayout>
  
  </ScrollView>    
    
</LinearLayout>
